--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,10 +3,11 @@
   // Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
   // List of extensions which should be recommended for users of this workspace.
   "recommendations": [
-    "streetsidesoftware.code-spell-checker",
     "editorconfig.editorconfig",
+    "streetsidesoftware.code-spell-checker",
     "valentjn.vscode-ltex",
-    "timonwong.shellcheck"
+    "timonwong.shellcheck",
+    "foxundermoon.shell-format"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
