--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,7 @@ insert_final_newline = true
 trim_trailing_whitespace = false
 
 [*.{json,yml}]
+indent_style = space
 indent_size = 2
 
 [{Makefile,make}]
